--- a/Masked_Autoendoder.ipynb
+++ b/Masked_Autoendoder.ipynb
@@ -429,8 +429,12 @@
         "\n",
         "        # This is a mask token initialized randomly from a normal\n",
         "        # distribution.\n",
-        "        self.mask_token = tf.Variable(\n",
-        "            tf.random.normal([1, patch_size * patch_size]), trainable=False)\n",
+        "        self.mask_token = self.add_weight(",
+        "             name='mask_token',",
+        "             shape=(1, self.patch_size * self.patch_size),",
+        "             initializer=tf.random_normal_initializer(),",
+        "             trainable=False",
+        "        )",
         "\n",
         "        # Create the projection layer for the patches.\n",
         "        self.projection = layers.Dense(units=self.projection_dim)\n",
