--- a/Masked_Autoendoder.ipynb
+++ b/Masked_Autoendoder.ipynb
@@ -429,11 +429,11 @@
         "\n",
         "        # This is a mask token initialized randomly from a normal\n",
         "        # distribution.\n",
-        "        self.mask_token = self.add_weight(",
-        "             name='mask_token',",
-        "             shape=(1, self.patch_size * self.patch_size),",
-        "             initializer=tf.random_normal_initializer(),",
-        "             trainable=False",
+        "        self.mask_token = self.add_weight(\n",
+        "             name='mask_token',\n",
+        "             shape=(1, self.patch_size * self.patch_size),\n",
+        "             initializer=tf.random_normal_initializer(),\n",
+        "             trainable=False"\n,
         "        )",
         "\n",
         "        # Create the projection layer for the patches.\n",
