--- a/Masked_Autoendoder.ipynb
+++ b/Masked_Autoendoder.ipynb
@@ -433,7 +433,7 @@
         "             name='mask_token',\n",
         "             shape=(1, self.patch_size * self.patch_size),\n",
         "             initializer=tf.random_normal_initializer(),\n",
-        "             trainable=False"\n,
+        "             trainable=False\n",
         "        )",
         "\n",
         "        # Create the projection layer for the patches.\n",
